--- a/kapcsolat.html
+++ b/kapcsolat.html
@@ -4,40 +4,107 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Kapcsolat - Grepotech Kft.</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Kapcsolat – Grepotech Kft.</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #f5f5f5;
+    }
+    header {
+      background: #0288d1;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      background-color: #0277bd;
+      padding: 1rem;
+      flex-wrap: wrap;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .container {
+      max-width: 600px;
+      margin: 2rem auto;
+      background: white;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    label {
+      display: block;
+      margin-top: 1rem;
+      font-weight: bold;
+    }
+    input, textarea {
+      width: 100%;
+      padding: 0.5rem;
+      margin-top: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    button {
+      margin-top: 1.5rem;
+      padding: 0.75rem 1.5rem;
+      background-color: #0288d1;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: #eeeeee;
+      font-size: 0.9rem;
+      margin-top: 2rem;
+    }
+  </style>
 </head>
 <body>
+
   <header>
-    <img src="logo.png" alt="Grepotech Kft. logó" class="logo" />
     <h1>Kapcsolat</h1>
+    <p>Lépjen velünk kapcsolatba!</p>
   </header>
+
   <nav>
     <a href="index.html">Főoldal</a>
     <a href="vizszereles.html">Vízszerelés</a>
     <a href="gazszereles.html">Gázszerelés</a>
     <a href="klimatelepites.html">Klímatelepítés</a>
-    <a href="kapcsolat.html">Kapcsolat</a>
   </nav>
-  <main class="container">
-    <h2>Elérhetőségeink</h2>
-    <p><strong>Telefon:</strong> 06 70 984 6525</p>
-    <p><strong>E-mail:</strong> <a href="mailto:grepotech@gmail.com">grepotech@gmail.com</a></p>
-    <p><strong>Szolgáltatási terület:</strong> Budapest és Pest megye</p>
 
-    <h3>Küldjön üzenetet</h3>
-    <form>
-      <label for="name">Név:</label><br />
-      <input type="text" id="name" name="name" required /><br /><br />
-      <label for="email">E-mail:</label><br />
-      <input type="email" id="email" name="email" required /><br /><br />
-      <label for="message">Üzenet:</label><br />
-      <textarea id="message" name="message" rows="5" required></textarea><br /><br />
+  <div class="container">
+    <form action="https://formspree.io/f/xgvyebvj" method="POST">
+      <label for="name">Név</label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="message">Üzenet</label>
+      <textarea id="message" name="message" rows="5" required></textarea>
+
       <button type="submit">Küldés</button>
     </form>
-  </main>
+
+    <p style="margin-top: 2rem;"><strong>Telefon:</strong> 06709846525<br>
+    <strong>Email:</strong> grepotech@gmail.com<br>
+    <strong>Szolgáltatási terület:</strong> Budapest, Pest megye</p>
+  </div>
+
   <footer>
     <p>&copy; 2025 Grepotech Kft. – Minden jog fenntartva.</p>
   </footer>
+
 </body>
 </html>
