--- a/futesszereles.html
+++ b/futesszereles.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="hu">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Grepotech Kft. - Víz, Gáz, Fűtésszerelés és Klímatelepítés</title>
+  <title>Fűtésszerelés – Grepotech Kft.</title>
   <style>
     body {
       margin: 0;
@@ -66,10 +65,11 @@
 <body>
   <header>
     <img src="logo.png" alt="Grepotech Kft. logó" class="logo" />
-    <h1>Grepotech Kft.</h1>
+    <h1>Fűtésszerelés</h1>
+    <p>Hatékony és megbízható fűtési megoldások otthonába</p>
   </header>
   <nav>
-    <a href="index.html">Főoldal</a>
+    <a href="index.html">Kezdőlap</a>
     <a href="vizszereles.html">Vízszerelés</a>
     <a href="gazszereles.html">Gázszerelés</a>
     <a href="futesszereles.html">Fűtésszerelés</a>
@@ -77,9 +77,21 @@
     <a href="kapcsolat.html">Kapcsolat</a>
   </nav>
   <main class="container">
-    <h2>Üdvözöljük a Grepotech Kft. oldalán!</h2>
-    <p>Több éves tapasztalattal, megbízható és professzionális szolgáltatást nyújtunk a vízszerelés, gázszerelés, fűtésszerelés és klímatelepítés területén Budapest és Pest megye egész területén.</p>
-    <p>Tekintse meg szolgáltatásainkat és lépjen velünk kapcsolatba bizalommal!</p>
+    <h2>Radiátoros fűtésszerelés</h2>
+    <p>
+      Klasszikus, megbízható és gyors fűtési megoldás. Radiátoros rendszereink kiválóan alkalmasak lakások,
+      családi házak vagy akár kisebb intézmények fűtésére. Kiemelten figyelünk a rendszer hatékonyságára
+      és az energiatakarékosságra.
+    </p>
+
+    <h2>Padlófűtés kiépítése</h2>
+    <p>
+      Modern és kényelmes megoldás a teljes lakótér egyenletes fűtésére. A padlófűtés kellemes hőérzetet biztosít,
+      miközben energiatakarékosabb működésre képes, mint a hagyományos rendszerek. Kiváló választás új építésű vagy
+      felújítandó ingatlanokba.
+    </p>
+
+    <p>Keressen minket bizalommal, ha korszerű fűtési rendszerre van szüksége!</p>
   </main>
   <footer>
     <p>&copy; 2025 Grepotech Kft. – Minden jog fenntartva.</p>
